# steering_algorithm

./: .gitignore  CMakeLists.txt  p7_report.txt  package.xml  setup.py
launch/: jinx.launch  mobot.launch  mobot_drifty.launch  mobot_starting_pen.launch  mobot_starting_pen.launch.xml
src/: linear_controller.py  linear_steering_wrt_odom.cpp  pub_des_state_path_client_escape.cpp  steering_algorithm.h
