<?xml version="1.0"?>
<package format="2">
  <name>steering_algorithm</name>
  <version>0.0.0</version>
  <description>The steering_algorithm package</description>

  <maintainer email="matt@todo.todo">matt</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <export>
  </export>
</package>